# gradient_remover

./: .gitignore  README.md  pyproject.toml
src/gradient_remover/: __init__.py
tests/: test_GradientRemover.py  test_gradient_remover.py
