[tool.poetry]
name = "gradient_remover"
version = "0.1.0"
description = ""
authors = ["Joshua Teves <joshua.teves@nih.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
mne = "1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
